Fix layout bug on charts

--- a/scss/responsiveness.scss
+++ b/scss/responsiveness.scss
@@ -4,7 +4,7 @@
         float: left;
         width: 50%;
         padding: 0 20px 0 0;
-        &:last-child {
+        &:nth-child(even) {
             padding-right: 0;
         }
     }
